# embedded-keyboard-rs

./: Cargo.toml  README.md
embedded-keyboard/: Cargo.toml
embedded-keyboard/src/: keycode.rs  lib.rs
gpio-keyboard/: Cargo.toml  README.md
gpio-keyboard/src/: lib.rs
src/: cols.rs  lib.rs  report.rs  rows.rs  state.rs
