[package]
name = "embedded-keymatrix"
version = "0.1.0"
authors = ["Felipe Balbi <febalbi@microsoft.com>"]
repository = "https://github.com/felipebalbi/embedded-keymatrix"
license = "MIT"
description = "Keyboard Matrix Driver for embedded-systems"
readme = "README.md"
keywords = ["keyboard", "keymatrix", "key scanning", "embedded-hal", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/embedded-keymatrix"
edition = "2021"

[dependencies]
defmt = { version = "0.3.8", optional = true }
embedded-hal = "1.0.0"

[features]
defmt = ["dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "forbid"

[lints.clippy]
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
style = "forbid"
pedantic = "forbid"
