[workspace]
resolver = "2"
members = [ "embedded-keyboard", "gpio-keyboard" ]

[workspace.package]
version = "0.1.0"
authors = ["Felipe Balbi <febalbi@microsoft.com>"]
repository = "https://github.com/pop-project/embedded-keyboard-rs"
license = "MIT"
readme = "README.md"
keywords = ["keyboard", "keymatrix", "key scanning", "embedded-hal", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/embedded-keymatrix"
edition = "2021"
rust-version = "1.79"

[workspace.dependencies]
embedded-hal = "1.0.0"
embedded-hal-mock = "0.11.1"
itertools = "0.13.0"

[patch.crates-io]
embedded-keyboard = { path = "embedded-keyboard" }
