[package]
name = "embedded-keyboard"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
